--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
@@ -116,7 +116,8 @@
     <script src="~/Content/ProgressBar/bootstrap-progressbar.min.js"></script>
     <!--Toggle-->
     <script src="~/Content/ToggleBootstrap/toggle.js"></script>
-
+    <!--CustomJs-->
+    <script src="~/Content/CustomJs/main.js"></script>
 
 
 </head>
