--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Home/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Home/Index.cshtml
@@ -7,10 +7,10 @@
 <div class="container-fluid" style="padding-top: 64px;">
     <div class="animated fadeIn">
         <div class="event-banner">
-            <img class="event-banner-image" src="~/Content/img/new_statesman_events.jpg">
-            <div class="header event-header">
-                <h3 class="event-name text-white">The Capstone Project Defense Ceremony</h3>
-            </div>
+            <img class="event-banner-image" src="@(Model.ImageURL)">
+            @*<div class="header event-header">
+                <h3 class="event-name text-white">@()</h3>
+            </div>*@
         </div>
         <br>
     </div>
