--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_LayoutEvent.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_LayoutEvent.cshtml
@@ -42,6 +42,8 @@
     <script src="~/Content/bootstrap-sweetalert-master/dist/sweetalert.min.js"></script>
     <!--Filestack-->
     <script src="~/Content/Filestack/filestack.min.js"></script>
+    <!--Custom Js-->
+    <script src="~/Content/CustomJs/main.js"></script>
     @*<script async defer
                 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7Meb98e_PppAWoqobk4Ml1rFygPl9eUI&callback=initMap">
         </script>*@
