--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
@@ -257,6 +257,8 @@
     <script src="~/signalr/hubs"></script>
     <!--Progress Bar-->
     <script src="~/Content/ProgressBar/bootstrap-progressbar.min.js"></script>
+    <!--Custom JS-->
+    <script src="~/Content/CustomJs/main.js"></script>
 
     @RenderSection("scripts", required: false)
 
