--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/ManageEvent/CollectionItem.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/ManageEvent/CollectionItem.cshtml
@@ -240,7 +240,7 @@
 
             //Filestack dùng để up hình
             // Set up the picker
-            const client = filestack.init('AdNHIzJfhTmey1CSdotUZz');
+            const client = filestack.init('AR6JpPavASZ2lDWwopoMNz');
             const options = {
                 onUploadDone: updateForm,
                 maxSize: 10 * 1024 * 1024,
